--- a/sample.html
+++ b/sample.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript 연습</title>
+    <title>JavaScript 연습1</title>
     <style>
     </style>
 </head>
 <body>
     <script src="./주민번호.js"></script>
 </body>
+
 </html>
