--- a/sample.html
+++ b/sample.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript 연습1</title>
     <style>
+       
     </style>
 </head>
 <body>
-    <script src="./주민번호.js"></script>
+    <script src="./while문.js"></script>
 </body>
 
 </html>
