--- a/0330 예제/index.html
+++ b/0330 예제/index.html
@@ -11,7 +11,7 @@
     <p>공부할 과목을 기록해 보세요.</p>
     <p>공부가 끝난 과목은 클릭해서 삭제할 수 있습니다.</p>
     <form action="#" name="frm">
-        <input type="text" name="subject">
+        <input id = "needReset" type="text" name="subject">
         <button onclick="addSubject()">추가</button>
     </form>
     <ul id="itemList"></ul>
